--- a/mobile/android/build.properties
+++ b/mobile/android/build.properties
@@ -1,3 +1,4 @@
 titanium.platform=/Users/torgny/Library/Application Support/Titanium/mobilesdk/osx/3.1.1.GA/android
 android.platform=/Users/torgny/android/platforms/android-10
 google.apis=/Users/torgny/android/add-ons/addon-google_apis-google-10
+android.ndk=/Users/torgny/android-ndk-r9
