--- a/mobile/android/build.properties
+++ b/mobile/android/build.properties
@@ -1,4 +1,9 @@
-titanium.platform=/Users/torgny/Library/Application Support/Titanium/mobilesdk/osx/3.1.1.GA/android
-android.platform=/Users/torgny/android/platforms/android-10
-google.apis=/Users/torgny/android/add-ons/addon-google_apis-google-10
-android.ndk=/Users/torgny/android-ndk-r9
+titanium.sdk=/Users/torgny/Library/Application Support/Titanium
+titanium.os=osx
+titanium.version=3.1.1.GA
+android.sdk=/Users/torgny/Android/android-sdk
+
+titanium.platform=${titanium.sdk}/mobilesdk/${titanium.os}/${titanium.version}/android
+android.platform=${android.sdk}/platforms/android-10
+google.apis=${android.sdk}add-ons/addon-google_apis-google-10
+android.ndk=/Users/torgny/Android/android-ndk-r8e
