--- a/mobile/android/.classpath
+++ b/mobile/android/.classpath
@@ -3,10 +3,11 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="build/.apt_generated"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-		<classpathentry kind="lib" path="/Users/torgny/Android/android-sdk/platforms/android-10/android.jar"/>
-		<classpathentry kind="lib" path="/Users/torgny/Android/android-sdk/add-ons/addon-google_apis-google-10/libs/maps.jar"/>
-		<classpathentry kind="lib" path="/Users/torgny/Library/Application Support/Titanium/mobilesdk/osx/3.1.1.GA/android/titanium.jar"/>
-		<classpathentry kind="lib" path="/Users/torgny/Library/Application Support/Titanium/mobilesdk/osx/3.1.1.GA/android/kroll-common.jar"/>
-		<classpathentry kind="lib" path="/Users/torgny/Library/Application Support/Titanium/mobilesdk/osx/3.1.1.GA/android/kroll-apt.jar"/>
+	<classpathentry kind="lib" path="lib/BackbeamAndroid.jar"/>
+	<classpathentry kind="lib" path="/Users/torgny/Android/android-sdk/platforms/android-10/android.jar"/>
+	<classpathentry kind="lib" path="/Users/torgny/Android/android-sdk/add-ons/addon-google_apis-google-10/libs/maps.jar"/>
+	<classpathentry kind="lib" path="/Users/torgny/Library/Application Support/Titanium/mobilesdk/osx/3.1.1.GA/android/titanium.jar"/>
+	<classpathentry kind="lib" path="/Users/torgny/Library/Application Support/Titanium/mobilesdk/osx/3.1.1.GA/android/kroll-common.jar"/>
+	<classpathentry kind="lib" path="/Users/torgny/Library/Application Support/Titanium/mobilesdk/osx/3.1.1.GA/android/kroll-apt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
